Repair warning from the plotting

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1163,24 +1163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\milan\\AppData\\Local\\Temp\\ipykernel_8692\\569524399.py:38: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e564093ca0>"
+       "<matplotlib.legend.Legend at 0x1e565861a20>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1233,7 +1225,8 @@
     "\n",
     "# rotate x-axis labels for both subplots\n",
     "for ax in [ax1, ax2]:\n",
-    "    ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
+    "    # ax.set_xticklabels(ax.get_xticklabels(), rotation=45)\n",
+    "    ax.tick_params(axis='x', labelrotation=45)\n",
     "\n",
     "fig.legend(handles, [labels[key] for key in labels.keys()], fontsize=7)\n"
    ]
