Add plots of the roads

--- a/notebooks-blds/blds-plot-figure-2.ipynb
+++ b/notebooks-blds/blds-plot-figure-2.ipynb
@@ -18,7 +18,8 @@
     "import json\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "import re\n"
    ]
   },
   {
@@ -45,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"{downloaded_data}\\blds_continents_data_18-23_ai.json\", \"r\") as f:\n",
+    "with open(f\"{downloaded_data}\\\\blds_continents_data_18-23_ai.json\", \"r\") as f:\n",
     "    data = json.load(f)\n",
     "# data\n"
    ]
@@ -96,8 +97,168 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# xtract only the year\n",
+    "# extract only the year\n",
     "df[\"year\"] = pd.to_datetime(df[\"timestamp\"]).dt.year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Append the names of the regions to the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0_Africa.geojson', '1_Asia.geojson', '2_Australia.geojson', '3_North America.geojson', '4_Oceania.geojson', '5_South America.geojson', '6_Antarctica.geojson', '7_Europe.geojson']\n",
+      "c:\\Users\\milan\\OneDrive - MUNI\\VŠ\\PhD\\Zahraniční stáž\\Work\\HeiGIT_notebooks\\analysis\\ai-assisted-osm-mapping-stats\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "geojson_dir = os.path.join(home_dir, \"geojson-continent-borders\", \"\")\n",
+    "\n",
+    "geojson_names = []\n",
+    "for (dir_path, dir_names, file_names) in os.walk(geojson_dir):  # give the path\n",
+    "    geojson_names.extend(file_names)\n",
+    "print(geojson_names)\n",
+    "print(os.getcwd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geojson_names_2 = geojson_names\n",
+    "\n",
+    "id_name_dic = {int(re.search(r'^\\d+', k)[0]): re.search(r'\\_.+\\.', v)[0][1:-1]\n",
+    "                for k, v in zip(geojson_names, geojson_names_2)}\n",
+    "id_name_ser = pd.Series(id_name_dic)\n",
+    "id_name_df = pd.DataFrame(id_name_ser, columns=[\"name\"])\n",
+    "id_name_df = id_name_df.reset_index().rename(columns={\"index\": \"id\"})\n",
+    "id_name_df[\"id\"] = id_name_df[\"id\"].astype(int)\n",
+    "# id_name_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>source</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "      <th>year</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2018-01-01T00:00:00Z</td>\n",
+       "      <td>29449360.0</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2019-01-01T00:00:00Z</td>\n",
+       "      <td>44240256.0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2020-01-01T00:00:00Z</td>\n",
+       "      <td>54298403.0</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2021-01-01T00:00:00Z</td>\n",
+       "      <td>67423672.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>remainder</td>\n",
+       "      <td>2022-01-01T00:00:00Z</td>\n",
+       "      <td>80187816.0</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature     source             timestamp       value  year  id    name\n",
+       "0        0  remainder  2018-01-01T00:00:00Z  29449360.0  2018   0  Africa\n",
+       "1        0  remainder  2019-01-01T00:00:00Z  44240256.0  2019   0  Africa\n",
+       "2        0  remainder  2020-01-01T00:00:00Z  54298403.0  2020   0  Africa\n",
+       "3        0  remainder  2021-01-01T00:00:00Z  67423672.0  2021   0  Africa\n",
+       "4        0  remainder  2022-01-01T00:00:00Z  80187816.0  2022   0  Africa"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge df with region names based on ids\n",
+    "df = df.merge(id_name_df, how=\"left\", left_on=\"feature\",\n",
+    "               right_on=\"id\")\n",
+    "df.head()"
    ]
   },
   {
@@ -116,34 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# labels for graph legend\n",
-    "labels_dic = {0:\"Africa\",\n",
-    "            1:\"Asia\",\n",
-    "            2:\"Australia\",\n",
-    "            3:\"North America\",\n",
-    "            4:\"Oceania\",\n",
-    "            5:\"South America\",\n",
-    "            6:\"Antarctica\",\n",
-    "            7:\"Europe\",\n",
-    "            }\n",
-    "\n",
-    "# creating pandas series from labels_dic and append it to the dataframe\n",
-    "ser_labels = pd.Series(labels_dic, name=\"continent\" )\n",
-    "\n",
-    "df_labels = pd.DataFrame({\"continent\": ser_labels, \"id\": range(len(ser_labels))})\n",
-    "# print(df_labels)\n",
-    "\n",
-    "df = df.merge(df_labels, how=\"left\", left_on=\"feature\", right_on=\"id\")\n",
-    "# df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +323,7 @@
        "Name: percentage, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +383,8 @@
        "      <th>timestamp</th>\n",
        "      <th>num_of_blds</th>\n",
        "      <th>year</th>\n",
-       "      <th>continent</th>\n",
        "      <th>id</th>\n",
+       "      <th>name</th>\n",
        "      <th>total_blds</th>\n",
        "      <th>percentage</th>\n",
        "    </tr>\n",
@@ -263,8 +397,8 @@
        "      <td>2018-01-01T00:00:00Z</td>\n",
        "      <td>29449360.0</td>\n",
        "      <td>2018</td>\n",
-       "      <td>Africa</td>\n",
        "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>258151878.0</td>\n",
        "      <td>11.407765</td>\n",
        "    </tr>\n",
@@ -275,8 +409,8 @@
        "      <td>2019-01-01T00:00:00Z</td>\n",
        "      <td>44240256.0</td>\n",
        "      <td>2019</td>\n",
-       "      <td>Africa</td>\n",
        "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>320167900.0</td>\n",
        "      <td>13.817830</td>\n",
        "    </tr>\n",
@@ -287,8 +421,8 @@
        "      <td>2020-01-01T00:00:00Z</td>\n",
        "      <td>54298403.0</td>\n",
        "      <td>2020</td>\n",
-       "      <td>Africa</td>\n",
        "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>364680591.0</td>\n",
        "      <td>14.889304</td>\n",
        "    </tr>\n",
@@ -299,8 +433,8 @@
        "      <td>2021-01-01T00:00:00Z</td>\n",
        "      <td>67423672.0</td>\n",
        "      <td>2021</td>\n",
-       "      <td>Africa</td>\n",
        "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>418092103.0</td>\n",
        "      <td>16.126512</td>\n",
        "    </tr>\n",
@@ -311,8 +445,8 @@
        "      <td>2022-01-01T00:00:00Z</td>\n",
        "      <td>80187816.0</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Africa</td>\n",
        "      <td>0</td>\n",
+       "      <td>Africa</td>\n",
        "      <td>472865820.0</td>\n",
        "      <td>16.957837</td>\n",
        "    </tr>\n",
@@ -321,12 +455,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   feature     source             timestamp  num_of_blds  year continent  id  \\\n",
-       "0        0  remainder  2018-01-01T00:00:00Z   29449360.0  2018    Africa   0   \n",
-       "1        0  remainder  2019-01-01T00:00:00Z   44240256.0  2019    Africa   0   \n",
-       "2        0  remainder  2020-01-01T00:00:00Z   54298403.0  2020    Africa   0   \n",
-       "3        0  remainder  2021-01-01T00:00:00Z   67423672.0  2021    Africa   0   \n",
-       "4        0  remainder  2022-01-01T00:00:00Z   80187816.0  2022    Africa   0   \n",
+       "   feature     source             timestamp  num_of_blds  year  id    name  \\\n",
+       "0        0  remainder  2018-01-01T00:00:00Z   29449360.0  2018   0  Africa   \n",
+       "1        0  remainder  2019-01-01T00:00:00Z   44240256.0  2019   0  Africa   \n",
+       "2        0  remainder  2020-01-01T00:00:00Z   54298403.0  2020   0  Africa   \n",
+       "3        0  remainder  2021-01-01T00:00:00Z   67423672.0  2021   0  Africa   \n",
+       "4        0  remainder  2022-01-01T00:00:00Z   80187816.0  2022   0  Africa   \n",
        "\n",
        "    total_blds  percentage  \n",
        "0  258151878.0   11.407765  \n",
@@ -336,7 +470,7 @@
        "4  472865820.0   16.957837  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -362,45 +496,40 @@
     }
    ],
    "source": [
-    "# Create a grid : initialize it\n",
-    "g = sns.FacetGrid(df_ai, col='continent', hue='continent', col_wrap=4, )\n",
+    "# create a grid : initialize it\n",
+    "g = sns.FacetGrid(df_ai, col='name', hue='name', col_wrap=4, )\n",
     "\n",
-    "# Add the line over the area with the plot function\n",
+    "# add the line over the area with the plot function\n",
     "g = g.map(plt.plot, 'year', 'num_of_blds')\n",
     "\n",
-    "# Fill the area with fill_between\n",
+    "# fill the area with fill_between\n",
     "g = g.map(plt.fill_between, 'year', 'num_of_blds',\n",
-    "          alpha=0.2)  # .set_titles(\"{col_name}\")\n",
+    "          alpha=0.2)\n",
     "\n",
+    "# rotate the xticklabels\n",
     "[plt.setp(ax.get_xticklabels(), rotation=90) for ax in g.axes.flat]\n",
     "\n",
-    "# Set subtitles using the get_subtitle function\n",
+    "# set subtitles using the get_subtitle function\n",
     "g.set_titles(\"{col_name}\")\n",
     "\n",
-    "\n",
-    "# Control the title of each facet\n",
-    "# g = g.set_titles(\"{col_name}\")\n",
-    "\n",
-    "# Add a title for the whole plot\n",
+    "# add a title for the whole plot\n",
     "plt.subplots_adjust(top=0.92)\n",
     "g.fig.suptitle('Evolution of the Microsoft AI buildings')\n",
     "\n",
+    "# set the axes titles\n",
     "axes = g.axes.flatten()\n",
-    "\n",
-    "\n",
     "for ax in axes:\n",
     "    ax.set_xlabel(\"Year\")\n",
     "    ax.set_ylabel(\"Number of buildings\")\n",
     "    # ax.set_ylim(100)\n",
     "\n",
-    "\n",
-    "# Show the graph\n",
+    "# show the graph\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -425,79 +554,68 @@
     }
    ],
    "source": [
+    "# create a grid : initialize it\n",
+    "g = sns.FacetGrid(df_rem, col='name', hue='name', col_wrap=4, )\n",
     "\n",
-    "# Create a grid : initialize it\n",
-    "g = sns.FacetGrid(df_rem, col='continent', hue='continent', col_wrap=4, )\n",
-    "\n",
-    "# Add the line over the area with the plot function\n",
+    "# add the line over the area with the plot function\n",
     "g = g.map(plt.plot, 'year', 'num_of_blds')\n",
     "\n",
-    "# Fill the area with fill_between\n",
+    "# fill the area with fill_between\n",
     "g = g.map(plt.fill_between, 'year', 'num_of_blds',\n",
     "          alpha=0.2)#.set_titles(\"{col_name}\")\n",
     "\n",
     "# g.set(ylim=(0, 100))\n",
     "\n",
+    "# rotate the xticklabels\n",
     "[plt.setp(ax.get_xticklabels(), rotation=90) for ax in g.axes.flat]\n",
     "\n",
-    "# Set subtitles using the get_subtitle function\n",
+    "# set subtitles using the get_subtitle function\n",
     "g.set_titles(\"{col_name}\")\n",
     "\n",
-    "\n",
-    "# Control the title of each facet\n",
-    "# g = g.set_titles(\"{col_name}\")\n",
-    "\n",
-    "# Add a title for the whole plot\n",
+    "# add a title for the whole plot\n",
     "plt.subplots_adjust(top=0.92)\n",
     "g.fig.suptitle('Evolution of the manually mapped buildings')\n",
     "\n",
+    "# set the axes titles\n",
     "axes = g.axes.flatten()\n",
-    "\n",
-    "\n",
     "for ax in axes:\n",
     "    ax.set_xlabel(\"Year\")\n",
     "    ax.set_ylabel(\"Number of buildings\")\n",
     "    # ax.set_ylim(100)\n",
     "\n",
-    "\n",
     "# Show the graph\n",
     "plt.show()\n",
     "\n",
     "\n",
-    "# Create a grid : initialize it\n",
-    "g = sns.FacetGrid(df_ai, col='continent', hue='continent', col_wrap=4, )\n",
+    "# create a grid : initialize it\n",
+    "g = sns.FacetGrid(df_ai, col='name', hue='name', col_wrap=4, )\n",
     "\n",
-    "# Add the line over the area with the plot function\n",
+    "# add the line over the area with the plot function\n",
     "g = g.map(plt.plot, 'year', 'num_of_blds')\n",
     "\n",
-    "# Fill the area with fill_between\n",
+    "# fill the area with fill_between\n",
     "g = g.map(plt.fill_between, 'year', 'num_of_blds',\n",
     "          alpha=0.2)  # .set_titles(\"{col_name}\")\n",
     "\n",
-    "#g.set(ylim=(0,100))\n",
+    "# g.set(ylim=(0,100))\n",
     "\n",
+    "# rotate the xticklabels\n",
     "[plt.setp(ax.get_xticklabels(), rotation=90) for ax in g.axes.flat]\n",
     "\n",
-    "# Set subtitles using the get_subtitle function\n",
+    "# set subtitles using the get_subtitle function\n",
     "g.set_titles(\"{col_name}\")\n",
     "\n",
-    "\n",
-    "# Control the title of each facet\n",
-    "# g = g.set_titles(\"{col_name}\")\n",
-    "\n",
-    "# Add a title for the whole plot\n",
+    "# add a title for the whole plot\n",
     "plt.subplots_adjust(top=0.92)\n",
     "g.fig.suptitle('Evolution of the Microsoft AI buildings')\n",
     "\n",
+    "# set the axes titles\n",
     "axes = g.axes.flatten()\n",
-    "\n",
-    "\n",
     "for ax in axes:\n",
     "    ax.set_xlabel(\"Year\")\n",
     "    ax.set_ylabel(\"Number of buildings\")\n",
     "\n",
-    "\n",
-    "# Show the graph\n",
+    "# show the graph\n",
     "plt.show()\n"
    ]
   },
