--- a/notebooks-blds/blds-plot-figure-1.ipynb
+++ b/notebooks-blds/blds-plot-figure-1.ipynb
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
     "\n",
     "df_last_rem = df_rem.groupby(\"name\")[[\"num_of_blds\", \"year\"]].last().reset_index()\n",
     "df_last_ai = df_ai.groupby(\"name\")[[\"num_of_blds\", \"year\"]].last().reset_index()\n",
-    "# df_last_rem\n"
+    "# df_last_rem"
    ]
   },
   {
@@ -790,7 +790,6 @@
     "\n",
     "for line in ax.lines:\n",
     "    print(line.get_color())\n",
-    "\n",
     "\n",
     "# add colorful annotation\n",
     "# for line, name in zip(ax.lines, df_last_rem[\"name\"]):\n",
