Add first statistics of relative numbers in blds-relative-numbers-states.ipynb

--- a/notebooks-blds-grid/blds-relative-numbers-states.ipynb
+++ b/notebooks-blds-grid/blds-relative-numbers-states.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "[660 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,40 +422,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the number of AI Microsoft (source=microsoft/BuildingFootprints) / manually mapped (remainder) buildings for every year\n",
-    "grouped = df.groupby([\"source\", \"year\"])[\"value\"].sum()\n",
+    "grouped = df.groupby([\"name\", \"year\"])[\"value\"].sum()\n",
     "# grouped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "source                               year\n",
-       "remainder                            2018    28793553.0\n",
-       "                                     2019    43530237.0\n",
-       "                                     2020    53601135.0\n",
-       "                                     2021    66684246.0\n",
-       "                                     2022    79452442.0\n",
-       "                                     2023    92110091.0\n",
-       "source=microsoft/BuildingFootprints  2018           0.0\n",
-       "                                     2019           0.0\n",
-       "                                     2020           0.0\n",
-       "                                     2021      219684.0\n",
-       "                                     2022      270325.0\n",
-       "                                     2023     2593774.0\n",
-       "Name: value, dtype: float64"
+       "name      year\n",
+       "Algeria   2018     261826.0\n",
+       "          2019     365631.0\n",
+       "          2020     404078.0\n",
+       "          2021     428225.0\n",
+       "          2022     538250.0\n",
+       "                    ...    \n",
+       "Zimbabwe  2019    3481873.0\n",
+       "          2020    3668184.0\n",
+       "          2021    3696191.0\n",
+       "          2022    3809584.0\n",
+       "          2023    3869906.0\n",
+       "Name: value, Length: 324, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,12 +465,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge the DataFrame with groupBy DataFrame and compute the percentage\n",
-    "merged_data = df.merge(grouped, on=[\"source\", 'year'], how='left', )\n",
+    "merged_data = df.merge(grouped, on=[\"name\", \"year\"], how=\"left\", )\n",
     "merged_data = merged_data.rename(columns={\"value_x\":\"num_of_blds\", \"value_y\":\"total_blds\"})\n",
     "merged_data[\"percentage\"] = (merged_data[\"num_of_blds\"] / merged_data[\"total_blds\"]) * 100\n",
     "# merged_data.head(10)\n"
@@ -479,41 +478,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "source                               year\n",
-       "remainder                            2018    100.0\n",
-       "                                     2019    100.0\n",
-       "                                     2020    100.0\n",
-       "                                     2021    100.0\n",
-       "                                     2022    100.0\n",
-       "                                     2023    100.0\n",
-       "source=microsoft/BuildingFootprints  2018      0.0\n",
-       "                                     2019      0.0\n",
-       "                                     2020      0.0\n",
-       "                                     2021    100.0\n",
-       "                                     2022    100.0\n",
-       "                                     2023    100.0\n",
-       "Name: percentage, dtype: float64"
+       "name      year\n",
+       "Algeria   2018    100.0\n",
+       "          2019    100.0\n",
+       "          2020    100.0\n",
+       "          2021    100.0\n",
+       "          2022    100.0\n",
+       "                  ...  \n",
+       "Zimbabwe  2019    100.0\n",
+       "          2020    100.0\n",
+       "          2021    100.0\n",
+       "          2022    100.0\n",
+       "          2023    100.0\n",
+       "Name: percentage, Length: 324, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# percentage verification\n",
-    "merged_data.groupby([\"source\", \"year\"])[\"percentage\"].sum()\n"
+    "merged_data.groupby([\"name\", \"year\"])[\"percentage\"].sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -558,8 +556,8 @@
        "      <td>2023</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Ethiopia</td>\n",
-       "      <td>92110091.0</td>\n",
-       "      <td>0.818142</td>\n",
+       "      <td>759918.0</td>\n",
+       "      <td>99.167410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -570,8 +568,8 @@
        "      <td>2023</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Ethiopia</td>\n",
-       "      <td>2593774.0</td>\n",
-       "      <td>0.243930</td>\n",
+       "      <td>759918.0</td>\n",
+       "      <td>0.832590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -582,8 +580,8 @@
        "      <td>2023</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Democratic Republic of the Congo</td>\n",
-       "      <td>92110091.0</td>\n",
-       "      <td>7.093162</td>\n",
+       "      <td>6556598.0</td>\n",
+       "      <td>99.647988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -594,8 +592,8 @@
        "      <td>2023</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Democratic Republic of the Congo</td>\n",
-       "      <td>2593774.0</td>\n",
-       "      <td>0.889823</td>\n",
+       "      <td>6556598.0</td>\n",
+       "      <td>0.352012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -606,8 +604,8 @@
        "      <td>2023</td>\n",
        "      <td>11.0</td>\n",
        "      <td>Namibia</td>\n",
-       "      <td>92110091.0</td>\n",
-       "      <td>0.353766</td>\n",
+       "      <td>325952.0</td>\n",
+       "      <td>99.969934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -630,8 +628,8 @@
        "      <td>2023</td>\n",
        "      <td>7.0</td>\n",
        "      <td>Morocco</td>\n",
-       "      <td>2593774.0</td>\n",
-       "      <td>1.890103</td>\n",
+       "      <td>341057.0</td>\n",
+       "      <td>14.374430</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>641</th>\n",
@@ -642,8 +640,8 @@
        "      <td>2023</td>\n",
        "      <td>8.0</td>\n",
        "      <td>Western Sahara</td>\n",
-       "      <td>92110091.0</td>\n",
-       "      <td>0.001866</td>\n",
+       "      <td>1719.0</td>\n",
+       "      <td>100.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>647</th>\n",
@@ -654,7 +652,7 @@
        "      <td>2023</td>\n",
        "      <td>8.0</td>\n",
        "      <td>Western Sahara</td>\n",
-       "      <td>2593774.0</td>\n",
+       "      <td>1719.0</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -666,8 +664,8 @@
        "      <td>2023</td>\n",
        "      <td>9.0</td>\n",
        "      <td>Republic of the Congo</td>\n",
-       "      <td>92110091.0</td>\n",
-       "      <td>0.634149</td>\n",
+       "      <td>584148.0</td>\n",
+       "      <td>99.994351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>659</th>\n",
@@ -678,8 +676,8 @@
        "      <td>2023</td>\n",
        "      <td>9.0</td>\n",
        "      <td>Republic of the Congo</td>\n",
-       "      <td>2593774.0</td>\n",
-       "      <td>0.001272</td>\n",
+       "      <td>584148.0</td>\n",
+       "      <td>0.005649</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -701,35 +699,35 @@
        "659       9  source=microsoft/BuildingFootprints  2023-01-01T00:00:00Z   \n",
        "\n",
        "     num_of_blds  year    id                              name  total_blds  \\\n",
-       "5       753591.0  2023   0.0                          Ethiopia  92110091.0   \n",
-       "11        6327.0  2023   0.0                          Ethiopia   2593774.0   \n",
-       "17     6533518.0  2023  10.0  Democratic Republic of the Congo  92110091.0   \n",
-       "23       23080.0  2023  10.0  Democratic Republic of the Congo   2593774.0   \n",
-       "29      325854.0  2023  11.0                           Namibia  92110091.0   \n",
+       "5       753591.0  2023   0.0                          Ethiopia    759918.0   \n",
+       "11        6327.0  2023   0.0                          Ethiopia    759918.0   \n",
+       "17     6533518.0  2023  10.0  Democratic Republic of the Congo   6556598.0   \n",
+       "23       23080.0  2023  10.0  Democratic Republic of the Congo   6556598.0   \n",
+       "29      325854.0  2023  11.0                           Namibia    325952.0   \n",
        "..           ...   ...   ...                               ...         ...   \n",
-       "635      49025.0  2023   7.0                           Morocco   2593774.0   \n",
-       "641       1719.0  2023   8.0                    Western Sahara  92110091.0   \n",
-       "647          0.0  2023   8.0                    Western Sahara   2593774.0   \n",
-       "653     584115.0  2023   9.0             Republic of the Congo  92110091.0   \n",
-       "659         33.0  2023   9.0             Republic of the Congo   2593774.0   \n",
+       "635      49025.0  2023   7.0                           Morocco    341057.0   \n",
+       "641       1719.0  2023   8.0                    Western Sahara      1719.0   \n",
+       "647          0.0  2023   8.0                    Western Sahara      1719.0   \n",
+       "653     584115.0  2023   9.0             Republic of the Congo    584148.0   \n",
+       "659         33.0  2023   9.0             Republic of the Congo    584148.0   \n",
        "\n",
        "     percentage  \n",
-       "5      0.818142  \n",
-       "11     0.243930  \n",
-       "17     7.093162  \n",
-       "23     0.889823  \n",
-       "29     0.353766  \n",
+       "5     99.167410  \n",
+       "11     0.832590  \n",
+       "17    99.647988  \n",
+       "23     0.352012  \n",
+       "29    99.969934  \n",
        "..          ...  \n",
-       "635    1.890103  \n",
-       "641    0.001866  \n",
+       "635   14.374430  \n",
+       "641  100.000000  \n",
        "647    0.000000  \n",
-       "653    0.634149  \n",
-       "659    0.001272  \n",
+       "653   99.994351  \n",
+       "659    0.005649  \n",
        "\n",
        "[110 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
