Add ipynbs with 3rd plot and repair 2nd blds plot

--- a/notebooks-blds/blds-plot-figure-1.ipynb
+++ b/notebooks-blds/blds-plot-figure-1.ipynb
@@ -698,7 +698,7 @@
    "source": [
     "# test for labels at the line\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
+    "plt.figure(figsize=(10, 5), dpi=300)\n",
     "plt.title(\"Evolution of manually mapped buildings 2018-2023\")\n",
     "\n",
     "# plot the data\n",
@@ -769,7 +769,7 @@
    "source": [
     "# without dictionary labels\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
+    "plt.figure(figsize=(10, 5), dpi=300)\n",
     "plt.title(\"Evolution of manually mapped buildings 2018-2023\")\n",
     "\n",
     "# plot the data\n",
@@ -818,7 +818,7 @@
    "source": [
     "# test for labels at the line\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
+    "plt.figure(figsize=(10, 5), dpi=300)\n",
     "plt.title(\"Evolution of Microsoft AI buildings 2018-2023\")\n",
     "\n",
     "# plot the data\n",
@@ -885,7 +885,7 @@
    "source": [
     "# without dictionary labels\n",
     "\n",
-    "plt.figure(figsize=(10, 5))\n",
+    "plt.figure(figsize=(10, 5), dpi=300)\n",
     "plt.title(\"Evolution of Microsoft AI buildings 2018-2023\")\n",
     "\n",
     "# plot the data\n",
@@ -933,7 +933,7 @@
    ],
    "source": [
     "# create a figure with two subplots\n",
-    "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(20, 5))\n",
+    "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(20, 5), dpi=300)\n",
     "fig.suptitle(\"Evolution of the OSM buildings 2018-2023\")\n",
     "\n",
     "fig.subplots_adjust(hspace=2)\n",
@@ -1028,7 +1028,7 @@
    ],
    "source": [
     "# create a figure with two subplots\n",
-    "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(13, 5))\n",
+    "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(13, 5), dpi=300)\n",
     "fig.suptitle(\"Evolution of the OSM buildings 2018-2023\")\n",
     "\n",
     "# create a Seaborn plot on the first subplot\n",
