--- a/notebooks-blds/blds-plot-figure-1-beta.ipynb
+++ b/notebooks-blds/blds-plot-figure-1-beta.ipynb
@@ -265,9 +265,13 @@
     "\n",
     "def data_spec(data_dic):\n",
     "    \n",
-    "    with open(f\"downloaded-data\\\\{data_dic[user_d_spec]}\", \"r\") as f:\n",
-    "        data = json.load(f)\n",
-    "    return data\n",
+    "    try:\n",
+    "        with open(f\"downloaded-data\\\\{data_dic[user_d_spec]}\", \"r\") as f:\n",
+    "            data = json.load(f)\n",
+    "        return data\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        print(\"Please download the data first.\")\n",
     "\n",
     "\n",
     "def get_geojson_names(home_dir, geojson_folder_dic):\n",
