Add blds and roads plots

--- a/notebooks-roads/roads-plot-figure-1.ipynb
+++ b/notebooks-roads/roads-plot-figure-1.ipynb
@@ -18,7 +18,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import re\n"
+    "import re\n",
+    "import numpy as np\n"
    ]
   },
   {
