--- a/notebooks-roads/roads-plot-figure-1-beta.ipynb
+++ b/notebooks-roads/roads-plot-figure-1-beta.ipynb
@@ -411,12 +411,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exclude states which give zero in total\n",
+    "df = df.groupby(\"name\", \"source\").filter(\n",
+    "    lambda x: x[\"value\"].sum() != 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the length of AI Microsoft (source=maxar) / manually mapped (remainder) roads for every year\n",
-    "grouped = df.groupby([\"source\", \"year\"])[\"value\"].sum()\n",
+    "grouped = df.groupby([\"name\", \"year\"])[\"value\"].sum()\n",
     "# grouped"
    ]
   },
@@ -427,7 +438,7 @@
    "outputs": [],
    "source": [
     "# merge the DataFrame with groupBy DataFrame and compute the percentage\n",
-    "merged_data = df.merge(grouped, on=[\"source\", 'year'], how='left', )\n",
+    "merged_data = df.merge(grouped, on=[\"name\", 'year'], how='left', )\n",
     "merged_data = merged_data.rename(columns={\"value_x\":\"len_of_roads\", \"value_y\":\"total_roads\"})\n",
     "merged_data[\"percentage\"] = (merged_data[\"len_of_roads\"] / merged_data[\"total_roads\"]) * 100\n",
     "# merged_data.head(10)\n"
@@ -464,7 +475,7 @@
    ],
    "source": [
     "# percentage verification\n",
-    "merged_data.groupby([\"source\", \"year\"])[\"percentage\"].sum()\n"
+    "merged_data.groupby([\"name\", \"year\"])[\"percentage\"].sum()\n"
    ]
   },
   {
