--- a/notebooks-blds/blds-plot-figure-1-beta.ipynb
+++ b/notebooks-blds/blds-plot-figure-1-beta.ipynb
@@ -417,12 +417,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exclude states which give zero in total\n",
+    "df = df.groupby(\"name\", \"source\").filter(\n",
+    "    lambda x: x[\"value\"].sum() != 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the number of AI Microsoft (source=microsoft/BuildingFootprints) / manually mapped (remainder) buildings for every year\n",
-    "grouped = df.groupby([\"source\", \"year\"])[\"value\"].sum()\n",
+    "grouped = df.groupby([\"name\", \"year\"])[\"value\"].sum()\n",
     "# grouped"
    ]
   },
@@ -466,7 +477,7 @@
    "outputs": [],
    "source": [
     "# merge the DataFrame with groupBy DataFrame and compute the percentage\n",
-    "merged_data = df.merge(grouped, on=[\"source\", 'year'], how='left', )\n",
+    "merged_data = df.merge(grouped, on=[\"name\", 'year'], how='left', )\n",
     "merged_data = merged_data.rename(columns={\"value_x\":\"num_of_blds\", \"value_y\":\"total_blds\"})\n",
     "merged_data[\"percentage\"] = (merged_data[\"num_of_blds\"] / merged_data[\"total_blds\"]) * 100\n",
     "# merged_data.head(10)\n"
@@ -503,7 +514,7 @@
    ],
    "source": [
     "# percentage verification\n",
-    "merged_data.groupby([\"source\", \"year\"])[\"percentage\"].sum()\n"
+    "merged_data.groupby([\"name\", \"year\"])[\"percentage\"].sum()\n"
    ]
   },
   {
