Update blds-download-export-data-ver2.ipynb and blds-download-export-data-ver2-hexagrid.ipynb

--- a/notebooks-blds/blds-plot-figure-1.ipynb
+++ b/notebooks-blds/blds-plot-figure-1.ipynb
@@ -162,8 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cont in data:\n",
-    "    for dic1 in cont:\n",
+    "for region in data:\n",
+    "    for dic1 in region:\n",
     "        feature, source = dic1[\"groupByObject\"][0], dic1[\"groupByObject\"][1]\n",
     "        for res in dic1[\"result\"]:\n",
     "            d[\"feature\"].append(feature)\n",
